# talk_is_cheap

./: .gitignore  .gitmodules
ORB_cv/: .gitignore  readme.txt
ORB_cv/src/orb_extractor/: CMakeLists.txt  package.xml
ORB_cv/src/orb_extractor/src/: orb_extractor_node.cpp
algorithms/sort/: data.py  heapsort.py  readme.md  shellsort.py
gps_message/: CSerial.cpp  Log.cpp  gps_message.cpp  gps_xwyd_node.py  main.cpp  readme.txt  serial_linux.cpp
gps_message/include/: gps_message.h  serial_linux.h  serial_windows.h
gps_message/references/: readme.txt
gps_message/references/gps/: eu260_gps_locator.msg  gps_message.cpp
gps_message/references/mylog/: logmain.cpp  myLog.cpp  myLog.h
gps_message/references/mylog2/: Log.h  log2019-8-8.txt  main.cpp
gps_message/references/serial/: Serials-linux.cpp  serials_windows.cpp  serials_windows.h  serials_windows2.cpp
leetcode/: host100-0003-longest substring without repeating characters.py  host100.md
matplotlib/: chgingLinePlot.py  chgingLinePlotButton.py  chgingLinePlotInJupyter.ipynb  chgingPlotAndMouse.py
readyamlconfig/: config.cc  config.h  readme.txt  stereo_INDE.yaml  test
test_eigen_map/: CMakeLists.txt  main.cpp
vscode_C++_test/: CMakeLists.txt  readme.txt
vscode_C++_test/src/: test.cpp
vscode_c++_ros_test_ws/: readme.txt
vscode_c++_ros_test_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
vscode_c++_ros_test_ws/devel/lib/pkgconfig/: test.pc
vscode_c++_ros_test_ws/devel/lib/test/: testing
vscode_c++_ros_test_ws/devel/share/test/cmake/: testConfig.cmake
vscode_c++_ros_test_ws/src/test/: CMakeLists.txt  package.xml
vscode_c++_ros_test_ws/src/test/src/: test.cpp
